website/resources/css/styles.css
@font-face
{
	font-family: 'offerings';
	font-style: normal;
	font-weight: normal;
	src: url('../font/offerings_regular-webfont.woff2') format('woff2'),
	url('../font/offerings_regular-webfont.woff') format('woff');
}
.spacer
{
	height: 4.6875rem;
	width: 100%;
}
#line
{
	background-color: #fff;
    height: 1.5625rem;
    left: 50%;
    position: fixed;
    z-index: 95;
    top: 5.46875rem;
    width: 0.125rem;
}
div#home_space.spacer
{
	height: 7.8125rem;
}
html
{
	font-family: 'offerings';
	font-size: 100%;
	font-weight: 600;
	line-height: 1.5rem;
}
header
{
	font-size: 1.2rem;
    height: 75px;
    background-color: black;
    position: fixed;
    top: 0;
    vertical-align: middle;
    width: 100%;
}
#header_home {
	height: 125px;
}
header img {
    height: 50px;
    position: absolute;
    left: 0;
    margin: 12.5px;
}
header h {
    top: 25px;
    color: white;
}
div.content
{
	max-width: 23.4375rem;
	padding: 0 5% 0 5%;
	text-align: center;
}
div.content img
{
	width: 99%;
}
p.title
{
	left: 0;
	position: relative;
	top: 0;
}
a
{
	color: rgb(100, 100, 100);
	text-decoration: none;
	vertical-align: middle;
}
h
{
	font-size: 1.5rem;
	position: relative;
}
p
{
	margin: 1rem 0;
}
ul
{
	background-color: #505050;
    width: 100%;
    height: 50px;
    list-style-type: none;
    margin: 0;
    overflow: hidden;
    padding: 0;
    display: block;
    position: fixed;
    z-index: 90;
    top: 4.6875rem;
}
li
{
	float: left;
    width: 50%;
    height: 100%;
}
li a
{
	color: #ffffff;
    height: 100%;
    display: block;
    padding: .8125rem;
    text-align: center;
}
.row
{
	display: flex;
	display: -ms-flexbox;
	flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	padding: 5% 5% 0 5%;
}
.row#row1, div#home_column1
{
	padding-top: 0;
}
div.row_title
{
	background: white;
	color: crimson;
	height: 3.125rem;
	line-height: 3.125rem;
	position: sticky;
	position: -webkit-sticky;
	text-align: center;
	top: 4.6875rem;
	vertical-align: middle;
	width: 100%;
	z-index: 10;
}
.row_title h
{
	font-size: 1.2rem;
}
.column
{
	height: fit-content;
	width: 100%;
}
.btt
{
	bottom: 5%;
    right: 5%;
	opacity: 0.5; /* Standard compliant browsers */
    -moz-opacity: 0.5; /* Firefox and Mozilla browsers */
    -webkit-opacity: 0.5; /* WebKit browser e.g. Safari */
    filter: alpha(opacity=50); /* For IE8 and earlier */
    position: fixed;
    width: 3.125rem;
    z-index: 20;
}
.column_title
{
	background: rgba(255, 255, 255, 0.5);
    /* opacity: 0.5;
    -moz-opacity: 0.5;
    -webkit-opacity: 0.5;
    filter: alpha(opacity=50); */
    bottom: 4%;
    height: 3rem;
    position: absolute;
    width: 100%;
}
.column_title h
{
	color: #000000;
    font-size: 1.2rem;
    display: block;
    padding: 3%;
    text-align: center;
}
body
{
	background-position: center;
	background-size: auto, cover;
	text-align: center;
	background-image: url("../images/processed/pattern.png");
}
.contact_title
{
	margin: 3.125rem 0;
	text-transform: uppercase;
	color: crimson;
}
form
{
	margin-top: 2rem;
	font-size: 1.2rem;
}
.form_control
{
	border: none;
	background: transparent;
	border-bottom: 0.0625rem solid #505050;
	margin-bottom: .5rem;
	border-radius: 0;
	outline: none;
	width: 75%;
}
input
{
	height: 2rem;
	padding-left: .5rem;
}
form .submit
{
	background: #1f1f1f;
	border-color: transparent;
	border-radius: .5rem;
	color: #fff;
	font-weight: bold;
	height: 3.125rem;
	margin-top: 1.2rem;
}
form .submit:hover
{
	background-color: #505050;
	cursor: pointer;
}
textarea
{
	max-height: 38vh;
	max-width: 75%;
	min-height: 8rem;
	min-width: 75%;
	padding: .5rem;
}
::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
	color: black;
	opacity: 1; /* Firefox */
}

  :-ms-input-placeholder { /* Internet Explorer 10-11 */
	color: black;
}

  ::-ms-input-placeholder { /* Microsoft Edge */
	color: black;
}
.social_media {
    padding-top: 5%;
}
.social_media img {
    height: 50px;
    width: 50px;
}

